When script sets the index when multiple it needs to deselect all the items and then set the new index Bug 77039 r=kmcclusk sr=attinasi a=dbaron